[project]
authors = [{ name = "MenPenS", email = "843261040@qq.com" }]
dependencies = ["pyhuskarui"]
description = "Ant-d UI-Kit for PySide6 and Qml"
keywords = ["Python", "PySide6", "Qml", "Antd", "UI-Kit"]
license = "Apache-2.0"
license-files = ["LICENSE*"]
name = "gallery"
requires-python = ">=3.9"
version = "0.5.3"

[tool.uv.sources]
pyhuskarui = { workspace = true }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
only-include = ["./"]
sources = { "." = "." }
